[metadata]
name = lfsccm
version = 0.0.1
description = Lustre Filesystem Client Cache Manager
classifiers =
    Programming Language :: Python :: 3
author = Yusuke Kaneko
author_email = yuusuke.kaneko.gs@s1.ntt-tx.co.jp
maintainer = Kota Tsuyuzaki
maintainer_email = kota.tsuyuzaki.pc@hco.ntt.co.jp
lisence = MIT License

# TODO: remove elevate from requirements
[options]
packages = find:
install_requires =
    paramiko
[options.entry_points]
console_scripts =
    lfsccm = lfsccm.main:main

[options.data_files]
/etc/slurm =
    bb_lua/burst_buffer.lua
    bb_lua/lfsccm.conf.example
